--- a/soluna-mobile/shared/xcodeproj/Soluna/Base.lproj/Main.storyboard
+++ b/soluna-mobile/shared/xcodeproj/Soluna/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Add Location View Controller-->
+        <!--New Location-->
         <scene sceneID="swB-8K-3Hp">
             <objects>
                 <viewController storyboardIdentifier="AddLocation" id="cUa-Jp-yFF" customClass="AddLocationViewController" customModule="Soluna" customModuleProvider="target" sceneMemberID="viewController">
@@ -108,8 +108,8 @@
                         <viewLayoutGuide key="safeArea" id="P2H-xE-Swj"/>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" id="o76-Lr-Zfa">
-                        <barButtonItem key="rightBarButtonItem" title="Geocode" id="fB6-2j-uc2">
+                    <navigationItem key="navigationItem" title="New Location" id="o76-Lr-Zfa">
+                        <barButtonItem key="rightBarButtonItem" title="Geocode" image="magnifyingglass" catalog="system" id="fB6-2j-uc2">
                             <connections>
                                 <action selector="onGeocodeClick:" destination="cUa-Jp-yFF" id="HCT-cq-6Tf"/>
                             </connections>
@@ -135,8 +135,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YHA-LY-qAM">
-                                <rect key="frame" x="186" y="411" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Longitude" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YHA-LY-qAM">
+                                <rect key="frame" x="20" y="117" width="77" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="???" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xRC-N2-Ac4">
+                                <rect key="frame" x="20" y="146" width="374" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Latitude" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fCg-Zu-6Bp">
+                                <rect key="frame" x="20" y="175" width="63" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="???" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i9p-qJ-4eY">
+                                <rect key="frame" x="20" y="204" width="374" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XdY-1A-g2m">
+                                <rect key="frame" x="20" y="268" width="374" height="545"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Ydr-T2-ceS">
+                                        <rect key="frame" x="0.0" y="28" width="374" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ydr-T2-ceS" id="cUN-nd-HXr">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zSH-Zj-Su4">
+                                                    <rect key="frame" x="166" y="11" width="39" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Reminders" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xJA-Xx-fWP">
+                                <rect key="frame" x="166" y="239" width="82" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -148,7 +200,7 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="MfJ-7c-cjj">
-                        <barButtonItem key="rightBarButtonItem" title="Delete" id="qGJ-7O-Oom">
+                        <barButtonItem key="rightBarButtonItem" title="Delete" image="trash" catalog="system" id="qGJ-7O-Oom">
                             <connections>
                                 <action selector="onDeleteClick:" destination="skT-qt-jgp" id="YDC-L5-NOm"/>
                             </connections>
@@ -156,12 +208,13 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="labelLabel" destination="YHA-LY-qAM" id="9Y0-dr-mpS"/>
+                        <outlet property="latitudeText" destination="i9p-qJ-4eY" id="gOI-9l-aQF"/>
+                        <outlet property="longitudeText" destination="xRC-N2-Ac4" id="yO1-7V-1n5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U6V-6I-bSV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2503" y="417"/>
+            <point key="canvasLocation" x="2502.898550724638" y="416.51785714285711"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="agJ-FG-H7H">
@@ -179,7 +232,7 @@
             </objects>
             <point key="canvasLocation" x="899" y="73"/>
         </scene>
-        <!--Location List View Controller-->
+        <!--Locations-->
         <scene sceneID="VsS-hi-5GN">
             <objects>
                 <tableViewController id="xqP-Yz-Qjs" customClass="LocationListViewController" customModule="Soluna" customModuleProvider="target" sceneMemberID="viewController">
@@ -187,13 +240,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LocationListItem" id="CXS-a2-mAg" customClass="LocationListItem" customModule="Soluna" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="CXS-a2-mAg" id="b9k-cG-1Kq">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xf8-st-ulE">
+                                            <rect key="frame" x="20" y="11" width="374" height="21.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Xf8-st-ulE" firstAttribute="top" secondItem="b9k-cG-1Kq" secondAttribute="topMargin" id="WqK-GW-7Wx"/>
+                                        <constraint firstItem="Xf8-st-ulE" firstAttribute="trailing" secondItem="b9k-cG-1Kq" secondAttribute="trailingMargin" id="XSb-uU-5vh"/>
+                                        <constraint firstItem="Xf8-st-ulE" firstAttribute="leading" secondItem="b9k-cG-1Kq" secondAttribute="leadingMargin" id="h2v-EI-vsR"/>
+                                        <constraint firstItem="Xf8-st-ulE" firstAttribute="centerY" secondItem="b9k-cG-1Kq" secondAttribute="centerY" id="oBY-Tg-3sm"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="label" destination="Xf8-st-ulE" id="OcV-If-HMT"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="xqP-Yz-Qjs" id="gSr-Pz-N7a"/>
                             <outlet property="delegate" destination="xqP-Yz-Qjs" id="1Ov-dm-Fch"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="Zs8-KR-Pgr">
-                        <barButtonItem key="rightBarButtonItem" title="Add" id="6BJ-RB-NVV">
+                    <navigationItem key="navigationItem" title="Locations" id="Zs8-KR-Pgr">
+                        <barButtonItem key="rightBarButtonItem" title="Add" image="plus" catalog="system" id="6BJ-RB-NVV">
                             <connections>
                                 <action selector="onAddLocationClick:" destination="xqP-Yz-Qjs" id="JKt-PF-7b8"/>
                             </connections>
@@ -207,7 +287,12 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e9G-v6-nVy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1744" y="76"/>
+            <point key="canvasLocation" x="1743.4782608695652" y="75.669642857142847"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="magnifyingglass" catalog="system" width="64" height="60"/>
+        <image name="plus" catalog="system" width="64" height="58"/>
+        <image name="trash" catalog="system" width="60" height="64"/>
+    </resources>
 </document>
